# ParallelBinaryFormat

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindWinPixEventRuntime.cmake
